--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "webrtc",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.25.0",
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.0",
+    "wrtc": "^0.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
+    "client": "npm start",
+    "server": "nodemon server.js",
+    "coverage": "npm test -- --coverage --watchAll",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll --detectOpenHandles",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "socket.io-mock": "^1.3.2"
   }
 }
